<?xml version="1.0"?>
<package format="2">
  <name>optflow_package</name>
  <version>0.0.0</version>
  <description>The optflow_package package</description>
  <maintainer email="chloe.potherat@icloud.com">Your Name</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <export>
  </export>
</package>
